; ModuleID = '/home/carl/AnghaBench/git/extr_merge-blobs.c_three_way_filemerge.c'
source_filename = "/home/carl/AnghaBench/git/extr_merge-blobs.c_three_way_filemerge.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32 }
%struct.TYPE_3__ = type { i64, i8* }

@.str = private unnamed_addr constant [5 x i8] c".our\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c".their\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.index_state*, i8*, i32*, i32*, i32*, i64*)* @three_way_filemerge to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @three_way_filemerge(%struct.index_state* %0, i8* %1, i32* %2, i32* %3, i32* %4, i64* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca %struct.index_state*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i64*, align 8
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_3__, align 8
  store %struct.index_state* %0, %struct.index_state** %8, align 8
  store i8* %1, i8** %9, align 8
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i64* %5, i64** %13, align 8
  %16 = load i8*, i8** %9, align 8
  %17 = load i32*, i32** %10, align 8
  %18 = load i32*, i32** %11, align 8
  %19 = load i32*, i32** %12, align 8
  %20 = load %struct.index_state*, %struct.index_state** %8, align 8
  %21 = call i32 @ll_merge(%struct.TYPE_3__* %15, i8* %16, i32* %17, i32* null, i32* %18, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* %19, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), %struct.index_state* %20, i32* null)
  store i32 %21, i32* %14, align 4
  %22 = load i32, i32* %14, align 4
  %23 = icmp slt i32 %22, 0
  br i1 %23, label %24, label %25

24:                                               ; preds = %6
  store i8* null, i8** %7, align 8
  br label %31

25:                                               ; preds = %6
  %26 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64*, i64** %13, align 8
  store i64 %27, i64* %28, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 1
  %30 = load i8*, i8** %29, align 8
  store i8* %30, i8** %7, align 8
  br label %31

31:                                               ; preds = %25, %24
  %32 = load i8*, i8** %7, align 8
  ret i8* %32
}

declare dso_local i32 @ll_merge(%struct.TYPE_3__*, i8*, i32*, i32*, i32*, i8*, i32*, i8*, %struct.index_state*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
